--- a/public_html/artigo1.html
+++ b/public_html/artigo1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Artigo1</title>
+    <title>Engenharia Electrotecnica e de Computadores</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
@@ -24,7 +24,6 @@
     <section>
         <h2>Engenharia Electrotecnica e de Computadores</h2>
         <br>
-
         <img src="imagens/artigo1.png">
         <p>Infromação sobre o produto</p>
 
