--- a/public_html/artigo2.html
+++ b/public_html/artigo2.html
@@ -28,6 +28,9 @@
         <p>Infromação sobre o produto</p>
 
     </section>
+    <footer>
+        <p>Desenvolvido por Nuno Sousa mais informações procure nos contactos</p>
+    </footer>
 </body>
 
 </html>
