--- a/public_html/contacto.html
+++ b/public_html/contacto.html
@@ -34,6 +34,9 @@
         </a>
 
     </section>
+    <footer>
+        <p>Desenvolvido por Nuno Sousa mais informações procure nos contactos</p>
+    </footer>
 </body>
 
 </html>
