envio para github

--- a/public_html/artigo1.html
+++ b/public_html/artigo1.html
@@ -29,7 +29,9 @@
 
     </section>
     <footer>
-        <p>Desenvolvido por Nuno Sousa mais informações procure nos contactos</p>
+        <p>Desenvolvido por Nuno Sousa mais informações procure nos
+            <a href="contacto.html">
+            CONTACTOS</p>
     </footer>
 </body>
 
