--- a/public_html/artigo3.html
+++ b/public_html/artigo3.html
@@ -22,14 +22,16 @@
         </ul>
     </nav>
     <section>
-        <h2>Artigo 3</h2>
+        <h2>Engenharia Informatica</h2>
         <br>
         <img src="imagens/artigo3.png">
         <p>Infromação sobre o produto</p>
 
     </section>
     <footer>
-        <p>Desenvolvido por Nuno Sousa mais informações procure nos contactos</p>
+        <p>Desenvolvido por Nuno Sousa mais informações procure nos
+            <a href="contacto.html">
+            CONTACTOS</p>
     </footer>
 </body>
 
