--- a/public_html/contacto.html
+++ b/public_html/contacto.html
@@ -35,7 +35,10 @@
 
     </section>
     <footer>
-        <p>Desenvolvido por Nuno Sousa mais informações procure nos contactos</p>
+        <p>Desenvolvido por Nuno Sousa mais informações procure nos
+            <a href="contacto.html">
+            CONTACTOS</p>
+        </a>
     </footer>
 </body>
 
