--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Vai ver informações do site">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Site</title>
+    <title>Site CTW</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 
@@ -52,7 +52,9 @@
     </div>
     <div>
         <footer>
-            <p>Desenvolvido por Nuno Sousa mais informações procure nos contactos</p>
+            <p>Desenvolvido por Nuno Sousa mais informações procure nos
+                <a href="contacto.html">
+                CONTACTOS</p>
         </footer>
     </div>
 
