--- a/public_html/contacto.html
+++ b/public_html/contacto.html
@@ -28,7 +28,7 @@
 
     </section>
     <section>
-        <h2>Redes Sociasi</h2>
+        <h2>Redes Sociais</h2>
         <a href="https://www.linkedin.com/in/nunommsousa/">
             <img src="imagens/linkedin.jpg">
         </a>
